[gd_scene load_steps=2 format=2]

[ext_resource path="res://components/harvester/part_chooser_popup/PartChooserPopup.gd" type="Script" id=1]

[node name="PartChooserPopup" type="PopupPanel"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 92.0
margin_bottom = 24.0

[node name="Prev" type="Button" parent="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
rect_pivot_offset = Vector2( 20, 0 )
text = "<"

[node name="MarginContainer" type="Panel" parent="HBoxContainer"]
margin_left = 44.0
margin_right = 44.0
margin_bottom = 40.0

[node name="Next" type="Button" parent="HBoxContainer"]
margin_left = 48.0
margin_right = 88.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
text = ">"

[connection signal="about_to_show" from="." to="." method="_on_PartChooserPopup_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_PartChooserPopup_popup_hide"]
[connection signal="pressed" from="HBoxContainer/Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="HBoxContainer/Next" to="." method="_on_Next_pressed"]
